# game-of-life-cpp

./: README.md  main.cpp  meson.build  shell.nix
